--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "method-override": "^3.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
+    "randomstring": "^1.2.2",
     "sequelize": "^6.20.1"
   },
   "devDependencies": {
